# stevia

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ccpp.yml  tests.yml
contrib/: googletest  is_specialization.h  type_name.h  variadic_not_empty.h
examples/: main.cpp
include/: checks.h  core.h  dttl.h  guard.h  modifiers.h  operators.h  relations.h  simp.h  state_machine.h  stevia.h  tl.h
include/internal/: core.h  guard_internal.h  impl.h  modifiers.h  operators.h  relation_macro.h  relations.h  state_machine.h  tl.h  variadic_not_empty.h
old/: main.cpp  main2.cpp  main3.cpp  main4.cpp
tests/: CMakeLists.txt  apply.cpp  extract_modif.cpp  find.cpp
tests/internal/: apply.cpp  extract_modifiers.cpp  find.cpp  state_machine.cpp
